# ais-predict

./: .gitignore  Untitled-1.ipynb  pyproject.toml  requirements.txt  setup.cfg  simulate.py  straight_line.csv  workspace.code-workspace
ais_predict/datasets/: bigquery.py  raw_ais.py
ais_predict/gp/: gaussianprocess.py
ais_predict/trajpred/: cvm.py  dyngp.py  posgp.py
ais_predict/utilities/: metrics.py
ais_predict/visualization/: dyngp.py  plotting.py
ais_predict_rs/: Cargo.toml
ais_predict_rs/src/: gp.rs  main.rs  plotting.rs
samples/: dyngp.ipynb  master.ipynb  posgp.ipynb
