[metadata]
# replace with your username:
name = ais-predict-haavardm
version = 0.0.1
author = Håvard Skåra Mellbye
author_email = havardmellbye@gmail.com
description = Code from master thesis for trajectory prediction using AIS data.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/HaavardM/ais-predict.git
project_urls =
    Bug Tracker = https://github.com/HaavardM/ais-predict/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6